<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stock_control"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_stock_control" />
        <item
            android:id="@+id/nav_stock_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_stock_list" />
        <item
            android:id="@+id/nav_sales_report"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_sales_report" />
    </group>
    <item android:title="@string/title_manage">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/action_settings"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/action_logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/action_share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/action_send" />
            </group>
        </menu>
    </item>

</menu>
