<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_practice"
        android:orderInCategory="103"
        android:title="@string/title_practice_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/title_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_manager"
        android:orderInCategory="102"
        android:title="@string/title_app_manager"
        app:showAsAction="never" />
</menu>
